tests/ui/parser/doc-before-extern-rbrace.rs
fn main() {}

extern "C" {
    /// hi
    //~^ ERROR found a documentation comment that doesn't document anything
}

// ferrocene-annotations: fls_q8l2jza7d9xa
// Comments
